Fixed an issue where polymerase could attach to DNA in locations that overlapped with transcription factors.
Made the node for the grabbed biomolecule always move to the top of the z-order for its layer.
Added support for multiple positive transcription factors per gene, added to gene 2 only so far.
Made the positive and negative transcription factors offset somewhat so they aren't right on top of each other (requested by MK).
3rd tab: Adjusted the range of the graph, the parameter ranges, and the default values in order to make the "noisy" nature of the single cell more apparent and yet still stay on the graph when all values are maxed out.
Made ribosomes larger, since it was pointed out they they are in reality about 5x larger (by mass) than the polymerase.
Made the polymerase and transcription factors do the 1D walk more quickly and detach sooner.
Prevented user interaction with mRNA destroyers when they are destroying.
Prevented user interaction with protein until it is fully grown.
Prevented user interaction with ribosome when it is translating mRNA.
Prevented user interaction with polymerase when it is transcribing.
Added infrastructure to prevent user interaction with biomolecules in some circumstances.
Fixed an issue where ribosomes wouldn't be able to perform another translation until they were moved by the user.
Fixed an issue that was preventing multiple polymerases from transcribing at the same time.
Made it easier to get transcription factors and polymerase to attach to the high-affinity sites on the DNA molecule.
Made biomolecules fall of the DNA strand if they are block transcription and the transcribing polymerase bumps into it.
# 0.00.15 (61246) Feb 13, 2012
2/13/12 Deploying to dev for a review meeting.
Reinstated the 2nd tab and put a new drawing on it that represents a revised design.
# 0.00.14 (61129) Feb 8, 2012
2/8/12 Deploying to dev for use in interviews.