@@ -1,3 +1,4 @@
+Added label for mRNA that fades in during synthesis and out when synthesis is complete.
 Fixed an issue where polymerase could attach to DNA in locations that overlapped with transcription factors.
 Made the node for the grabbed biomolecule always move to the top of the z-order for its layer.
 Added support for multiple positive transcription factors per gene, added to gene 2 only so far.
